@@ -1,3 +1,8 @@
+20030826
+ - (djm) Bug #629: Mark ssh_config option "pamauthenticationviakbdint"
+   as deprecated. Remove mention from README.privsep. Patch from 
+   aet AT cc.hut.fi
+
 20030825
  - (djm) Bug #621: Select OpenSC keys by usage attributes. Patch from 
    larsch@trustcenter.de
@@ -869,4 +874,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.2905 2003/08/25 05:01:04 dtucker Exp $
+$Id: ChangeLog,v 1.2906 2003/08/26 00:48:14 djm Exp $
